tests/invalids/invalidWhile3-2.gt
proc main ()
    int m;
begin
    while int n do
        read m;
    od
end
